Se corrigieron unos bugs y se le agrego un Dark Mode a la pagina utlizando mixins con Less

--- a/css/articulos.less
+++ b/css/articulos.less
@@ -2,11 +2,11 @@
   max-width: 660px;
   margin: 0 auto;
   &__intro {
-    font-size: @fuente-base + 8%;
+    .fuente(25px);
   }
   h2 {
     margin: 40px 0;
-    font-size: 50px;
+    .fuente(50px);
     text-align: center;
   }
   h3 {
