--- a/css/intros.less
+++ b/css/intros.less
@@ -30,7 +30,7 @@
   }
   &__titulo {
     .Oswald;
-    font-size: 50px;
+    .fuente(50px);
   }
   &__autor {
     width: 150px;
